--- a/br-testing-automation/env-oadp.properties
+++ b/br-testing-automation/env-oadp.properties
@@ -1,16 +1,16 @@
 OC="oc" #default, can be overridden with --oc option when calling script
 YQ="yq" #default, can be overridden with --yq option when calling script
-STORAGE_CLASS=""
+STORAGE_CLASS="rook-cephfs"
 
-OPERATOR_NS="" 
-SERVICES_NS=""
+OPERATOR_NS="cs-op" 
+SERVICES_NS="cs-serv"
 TETHERED_NS=""
 DOCKER_USER= #not currently used but listed as a prereq for some of the Fusion scripts so included for now
 DOCKER_PASS=
 
 #only one of the following can be enabled at a time
-BACKUP="true" #script is in backup mode
-RESTORE="false" #script is in restore mode
+BACKUP="false" #script is in backup mode
+RESTORE="true" #script is in restore mode
 SETUP="false" #setup the OADP instance for the cluster
 
 #install oadp
@@ -34,19 +34,21 @@ CERT_MANAGER_NAMESPACE="ibm-cert-manager" #default
 LICENSING_NAMESPACE="ibm-licensing" #defaul
 LSR_NAMESPACE="ibm-ls-reporter" #default
 CPFS_VERSION="4.14" #default
-ZENSERVICE_NAME="" #the name of the deployed zenservice, script assumes at least one is deployed
-ZEN_NAMESPACE=""
+ZENSERVICE_NAME="lite-cr" #the name of the deployed zenservice, script assumes at least one is deployed
+ZEN_NAMESPACE="cs-serv"
 
 ENABLE_CERT_MANAGER=1
-ENABLE_LICENSING=1
-ENABLE_LSR=1
+ENABLE_LICENSING=0
+ENABLE_LSR=0
+RESTORE_SINGLETONS="true"
+
 # Change to 1 to enable private catalog
 ENABLE_PRIVATE_CATALOG=0
 #change to 0 to disable labeling catalog sources in openshift-marketplace
 ENABLE_DEFAULT_CS=1
 # Add additional CatalogSources separated by comma which are withour ".spec.publisher: IBM"
 # For example: "my-catalog,my-catalog2,my-catalog3"
-ADDITIONAL_SOURCES="" 
+ADDITIONAL_SOURCES="ibm-operator-catalog-latest" 
 CONTROL_NS="" # Pass the control namespace if it is needed to be backed up
 
 # ==============================================================================
@@ -56,5 +58,5 @@ BACKUP_CLU_TOKEN=""
 RESTORE_CLU_SERVER=""
 RESTORE_CLU_TOKEN=""
 TARGET_CLUSTER=""  # cluster name
-BACKUP_NAME="" # always necessary for either backup or restore
+BACKUP_NAME="automationtest-20250806160542" # always necessary for either backup or restore
 RESTORE_NAME="" # if --restore is enabled, this is necessary
