script prereqs and validations
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/br-testing-automation/env-oadp.properties
+++ b/br-testing-automation/env-oadp.properties
@@ -37,10 +37,10 @@ CPFS_VERSION="4.14" #default
 ZENSERVICE_NAME="lite-cr" #the name of the deployed zenservice, script assumes at least one is deployed
 ZEN_NAMESPACE="cs-serv"
 
-ENABLE_CERT_MANAGER=1
-ENABLE_LICENSING=0
-ENABLE_LSR=0
-RESTORE_SINGLETONS="true"
+# true false values
+ENABLE_CERT_MANAGER="true"
+ENABLE_LICENSING="false"
+ENABLE_LSR="false"
 
 # Change to 1 to enable private catalog
 ENABLE_PRIVATE_CATALOG=0
@@ -57,6 +57,5 @@ BACKUP_CLU_SERVER=""
 BACKUP_CLU_TOKEN=""
 RESTORE_CLU_SERVER=""
 RESTORE_CLU_TOKEN=""
-TARGET_CLUSTER=""  # cluster name
+TARGET_CLUSTER_TYPE=""  # determines if restoring to the same cluster or to a different cluster. Values are "same" and "diff"
 BACKUP_NAME="automationtest-20250806160542" # always necessary for either backup or restore
-RESTORE_NAME="" # if --restore is enabled, this is necessary
