support licensing and lsr restores, add lsr workaaround job
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/br-testing-automation/env-oadp.properties
+++ b/br-testing-automation/env-oadp.properties
@@ -39,8 +39,8 @@ ZEN_NAMESPACE="cs-serv"
 
 # true false values
 ENABLE_CERT_MANAGER="true"
-ENABLE_LICENSING="false"
-ENABLE_LSR="false"
+ENABLE_LICENSING="true"
+ENABLE_LSR="true"
 
 # Change to 1 to enable private catalog
 ENABLE_PRIVATE_CATALOG=0
@@ -57,5 +57,5 @@ BACKUP_CLU_SERVER=""
 BACKUP_CLU_TOKEN=""
 RESTORE_CLU_SERVER=""
 RESTORE_CLU_TOKEN=""
-TARGET_CLUSTER_TYPE=""  # determines if restoring to the same cluster or to a different cluster. Values are "same" and "diff"
+TARGET_CLUSTER_TYPE="same"  # determines if restoring to the same cluster or to a different cluster. Values are "same" and "diff"
 BACKUP_NAME="automationtest-20250806160542" # always necessary for either backup or restore
