--- a/velero/restore/lsr/lsr-data-restore-job.yaml
+++ b/velero/restore/lsr/lsr-data-restore-job.yaml
@@ -10,7 +10,7 @@ spec:
         - command:
           - sh
           - -c
-          - /lsr/br_lsr.sh restore <lsr namespace>
+          - /lsr/br_lsr.sh <lsr namespace> restore 
           image: icr.io/cpopen/cpfs/cpfs-utils:4.6.0 #4.1.0 if using CS 4.1, 4.2.0 if using CS 4.2
           imagePullPolicy: Always
           name: lsr-restore-job
