add more parameter checks
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/br-testing-automation/env-oadp.properties
+++ b/br-testing-automation/env-oadp.properties
@@ -14,11 +14,9 @@ DOCKER_PASS=
 BACKUP="true" #script is in backup mode
 RESTORE="true" #script is in restore mode
 SETUP_BACKUP="true" #setup the OADP instance for the cluster
-SETUP_RESTORE="false"
+SETUP_RESTORE="true"
 
 #install oadp
-OADP_INSTALL="true" #true has the script install oadp operator in velero namespace, false assumes operator already installed in velero namespace
-OADP_RESOURCE_CREATION="false" #true has script create OADP required resources (DataProtectionApplication and necessary Secret)
 OADP_NS="velero" #default is velero, currently only supports velero
 DPA_NAME="bcdr-data-protection-app" #Name of the DataProtectionApplication, defaults to bcdr-data-protection-app
 BACKUP_STORAGE_LOCATION_NAME="bcdr-data-protection-app-1" #name of s3 storage
