update modify idp function to verification step
Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

--- a/velero/schedule/common-service-db/cs-db-br-script-cm-4.6.10.4.11.yaml
+++ b/velero/schedule/common-service-db/cs-db-br-script-cm-4.6.10.4.11.yaml
@@ -131,7 +131,6 @@ data:
         
         info "Detected cluster domain: $CLUSTER_DOMAIN"
         
-        # Construct the new IDP URL based on the cluster domain and namespace
         NEW_IDP_URL="https://cp-console.${CSDB_NAMESPACE}.${CLUSTER_DOMAIN}/idprovider/v1/auth"
         
         info "Updating IDP URLs to: $NEW_IDP_URL"
@@ -140,12 +139,18 @@ data:
         ACCOUNT_IAM_EXISTS=$(oc -n $CSDB_NAMESPACE exec -t $CNPG_PRIMARY_POD -c postgres -- psql -U postgres -c "\list" | grep "account_iam" || echo False)
         
         if [[ $ACCOUNT_IAM_EXISTS != "False" ]]; then
-            # Update the idp column in the idp_config table
             oc -n $CSDB_NAMESPACE exec -t $CNPG_PRIMARY_POD -c postgres -- psql -U postgres -d account_iam -c "
                 UPDATE accountiam.idp_config 
                 SET idp = '$NEW_IDP_URL', 
                     modified_ts = NOW()
                 WHERE idp LIKE '%/idprovider/v1/%';
+            "
+            
+            info "Verifying IDP configuration update..."
+            oc -n $CSDB_NAMESPACE exec -t $CNPG_PRIMARY_POD -c postgres -- psql -U postgres -d account_iam -c "
+                SELECT uid, realm, idp, modified_ts 
+                FROM accountiam.idp_config 
+                ORDER BY modified_ts DESC;
             "
             
             success "IDP configuration updated successfully."
