--- a/br-testing-automation/env-oadp.properties
+++ b/br-testing-automation/env-oadp.properties
@@ -1,14 +1,12 @@
 OC="oc" #default, can be overridden with --oc option when calling script
 YQ="yq" #default, can be overridden with --yq option when calling script
-STORAGE_CLASS="rook-cephfs"
+STORAGE_CLASS=""
 NO_OLM="false"
 
-OPERATOR_NS="cs-op" 
-SERVICES_NS="cs-serv"
+OPERATOR_NS="" 
+SERVICES_NS=""
 #comma delimited for tethered namespaces
 TETHERED_NS=""
-DOCKER_USER= #not currently used but listed as a prereq for some of the Fusion scripts so included for now
-DOCKER_PASS=
 
 #only one of the following can be enabled at a time
 BACKUP="true" #script is in backup mode
@@ -18,11 +16,11 @@ SETUP_RESTORE="true"
 
 #install oadp
 OADP_NS="velero" #default is velero, currently only supports velero
-DPA_NAME="bcdr-data-protection-app" #Name of the DataProtectionApplication, defaults to bcdr-data-protection-app
-BACKUP_STORAGE_LOCATION_NAME="bcdr-data-protection-app-1" #name of s3 storage
-BUCKET_REGION="" #region where the storage bucket is located, default is us-east
+DPA_NAME="" #Name of the DataProtectionApplication, defaults to bcdr-data-protection-app
+BACKUP_STORAGE_LOCATION_NAME="" #name of s3 storage, usually in format ${DPA_NAME}-1
+BUCKET_REGION="" #region where the storage bucket is located
 STORAGE_BUCKET_NAME="" #name of existing s3 bucket
-S3_URL="" #make sure to escape `/` and `:`
+S3_URL=""
 STORAGE_SECRET_ACCESS_KEY="" #secret access key from s3 storage
 STORAGE_SECRET_ACCESS_KEY_ID="" #access key id from s3 storage
 
@@ -38,8 +36,8 @@ CERT_MANAGER_NAMESPACE="ibm-cert-manager" #default
 LICENSING_NAMESPACE="ibm-licensing" #defaul
 LSR_NAMESPACE="ibm-ls-reporter" #default
 CPFS_VERSION="4.14" #default
-ZENSERVICE_NAME="lite-cr" #the name of the deployed zenservice, script assumes at least one is deployed
-ZEN_NAMESPACE="cs-serv"
+ZENSERVICE_NAME="" #the name of the deployed zenservice, script assumes at least one is deployed
+ZEN_NAMESPACE=""
 
 # true false values
 ENABLE_CERT_MANAGER="true"
@@ -52,7 +50,7 @@ ENABLE_PRIVATE_CATALOG="false"
 ENABLE_DEFAULT_CS="true"
 # Add additional CatalogSources separated by comma which are withour ".spec.publisher: IBM"
 # For example: "my-catalog,my-catalog2,my-catalog3"
-ADDITIONAL_SOURCES="ibm-operator-catalog-latest" 
+ADDITIONAL_SOURCES="" 
 CONTROL_NS="" # Pass the control namespace if it is needed to be backed up
 
 # ==============================================================================
@@ -62,4 +60,4 @@ BACKUP_CLU_TOKEN=""
 RESTORE_CLU_SERVER=""
 RESTORE_CLU_TOKEN=""
 TARGET_CLUSTER_TYPE="same"  # determines if restoring to the same cluster or to a different cluster. Values are "same" and "diff"
-BACKUP_NAME="backup-test-1" # always necessary for either backup or restore
+BACKUP_NAME="" # always necessary for either backup or restore
