--- a/velero/spectrum-fusion/recipes/no-olm/singletons/child-licensing-recipe.yaml
+++ b/velero/spectrum-fusion/recipes/no-olm/singletons/child-licensing-recipe.yaml
@@ -12,41 +12,38 @@ spec:
     - includeClusterResources: true
       includedResourceTypes:
         - ibmlicensings.operator.ibm.com
-        - customresourcedefinitions.apiextensions.k8s.io
-        - clusterrole
-        - clusterrolebinding
         - role
         - rolebinding
         - serviceaccount
         - deployments
         - secrets
       labelSelector: foundationservices.cloudpak.ibm.com=ls-chart
-      name: licensing-resources
+      name: licensing-ns-resources
       type: resource
-    - backupRef: licensing-resources
-      includeClusterResources: true
+    - includeClusterResources: true
       includedResourceTypes:
         - customresourcedefinitions.apiextensions.k8s.io
-      name: licensing-crd
+        - clusterrole
+        - clusterrolebinding
+      labelSelector: foundationservices.cloudpak.ibm.com=ls-cluster
+      name: licensing-cluster-resources
       type: resource
-    - backupRef: licensing-resources
+    - backupRef: licensing-ns-resources
       includeClusterResources: true
       includedResourceTypes:
         - serviceaccount
-        - clusterrole
-        - clusterrolebinding
         - role
         - rolebinding
       name: licensing-rbac-resources
       type: resource
-    - backupRef: licensing-resources
+    - backupRef: licensing-ns-resources
       includeClusterResources: true
       includedResourceTypes:
         - ibmlicensings.operator.ibm.com
         - secrets
       name: licensing-workload-resources
       type: resource
-    - backupRef: licensing-resources
+    - backupRef: licensing-ns-resources
       includeClusterResources: true
       includedResourceTypes:
         - deployments
@@ -55,13 +52,15 @@ spec:
   workflows:
     - failOn: any-error
       name: singleton-resources-backup
+      priority: 0
       sequence:
-        - group: licensing-resources
+        - group: licensing-ns-resources
+        - group: licensing-cluster-resources
     - failOn: any-error
       name: singleton-resources-restore
+      priority: 0
       sequence:
-        - group: licensing-crd
         - group: licensing-rbac-resources
+        - group: licensing-cluster-resources
         - group: licensing-workload-resources
         - group: licensing-deployment
-    
