--- a/velero/spectrum-fusion/recipes/no-olm/singletons/child-ls-reporter-recipe.yaml
+++ b/velero/spectrum-fusion/recipes/no-olm/singletons/child-ls-reporter-recipe.yaml
@@ -7,67 +7,61 @@ metadata:
     dp.isf.ibm.com/parent-recipe: cpfs-singleton-parent-recipe
     dp.isf.ibm.com/parent-recipe-namespace: <fusion ns>
 spec:
-  appType: common-service
+  appType: singleton
   groups:
-    # lsr chart resources
+    - includedResourceTypes:
+        - ibmlicenseservicereporters.operator.ibm.com
+        - role
+        - rolebinding
+        - serviceaccount
+        - deployments
+        - secrets
+      labelSelector: foundationservices.cloudpak.ibm.com=lsr-chart
+      name: lsr-parent-resources
+      type: resource
     - includeClusterResources: true
       includedResourceTypes:
         - customresourcedefinitions.apiextensions.k8s.io
-        - secrets
-        - ibmlicenseservicereporters.operator.ibm.com
-        - serviceaccount
-        - role
-        - rolebinding
-        - deployments
         - clusterrole
         - clusterrolebinding
-      labelSelector: foundationservices.cloudpak.ibm.com=lsr-chart
-      name: license-service-reporter-parent-resources
+      labelSelector: foundationservices.cloudpak.ibm.com=lsr-cluster
+      name: lsr-parent-cluster-resources
       type: resource
-    - backupRef: license-service-reporter-parent-resources
-      includeClusterResources: true
-      includedResourceTypes:
-        - customresourcedefinitions.apiextensions.k8s.io
-      name: license-service-reporter-crd
-      type: resource
-    - backupRef: license-service-reporter-parent-resources
+    - backupRef: lsr-parent-resources
       includeClusterResources: true
       includedResourceTypes:
         - serviceaccount
-        - clusterrole
-        - clusterrolebinding
         - role
         - rolebinding
-      name: license-service-reporter-rbac-resources
+      name: lsr-rbac-resources
       type: resource
-    - backupRef: license-service-reporter-parent-resources
+    - backupRef: lsr-parent-resources
       includeClusterResources: true
       includedResourceTypes:
         - ibmlicenseservicereporters.operator.ibm.com
         - secrets
-      name: license-service-reporter-workload-resources
+      name: lsr-workload-resources
       type: resource
-    - backupRef: license-service-reporter-parent-resources
+    - backupRef: lsr-parent-resources
       includeClusterResources: true
       includedResourceTypes:
         - deployments
-      name: license-service-reporter-deployment
+      name: lsr-deployment
       type: resource
-    # lsr data resources
     - includeClusterResources: true
       includedResourceTypes:
         - serviceaccount
         - role
         - rolebinding
         - configmaps
+      labelSelector: foundationservices.cloudpak.ibm.com=lsr-data
       name: lsr-pre-deploy
       type: resource
-      labelSelector: foundationservices.cloudpak.ibm.com=lsr-data
     - includeClusterResources: true
       includedResourceTypes:
         - deployments
-      name: lsr-deployment
       labelSelector: foundationservices.cloudpak.ibm.com=lsr-data
+      name: lsr-deployment
       type: resource
     - labelSelector: foundationservices.cloudpak.ibm.com=lsr-data
       name: lsr-volume
@@ -78,8 +72,8 @@ spec:
           name: podReady
           onError: fail
           timeout: 600
-      name: lsr-operator-check
       labelSelector: app.kubernetes.io/name=ibm-license-service-reporter
+      name: lsr-operator-check
       namespace: <lsr namespace>
       onError: fail
       selectResource: pod
@@ -90,8 +84,8 @@ spec:
           name: podReady
           onError: fail
           timeout: 600
-      name: lsr-instance-check
       labelSelector: app.kubernetes.io/name=ibm-license-service-reporter-instance
+      name: lsr-instance-check
       namespace: <lsr namespace>
       onError: fail
       selectResource: pod
@@ -131,17 +125,18 @@ spec:
       name: singleton-resources-backup
       sequence:
         - hook: lsr-data/backup
-        - group: license-service-reporter-parent
+        - group: lsr-parent-resources
+        - group: lsr-parent-cluster-resources
         - group: lsr-pre-deploy
         - group: lsr-volume
         - group: lsr-deployment
     - failOn: any-error
       name: singleton-resources-restore
       sequence:
-        - group: license-service-reporter-crd
-        - group: license-service-reporter-rbac-resources
-        - group: license-service-reporter-workload-resources
-        - group: license-service-reporter-deployment
+        - group: lsr-rbac-resources
+        - group: lsr-parent-cluster-resources
+        - group: lsr-workload-resources
+        - group: lsr-deployment
         - hook: lsr-operator-check/podReady
         - group: lsr-pre-deploy
         - group: lsr-volume
