--- a/velero/spectrum-fusion/recipes/no-olm/singletons/child-licensing-recipe.yaml
+++ b/velero/spectrum-fusion/recipes/no-olm/singletons/child-licensing-recipe.yaml
@@ -11,7 +11,13 @@ spec:
   groups:
     - includeClusterResources: true
       includedResourceTypes:
-        - ibmlicensings.operator.ibm.com
+        - customresourcedefinitions.apiextensions.k8s.io
+        - clusterrole
+        - clusterrolebinding
+      labelSelector: foundationservices.cloudpak.ibm.com=ls-cluster
+      name: licensing-cluster-resources
+      type: resource
+    - includedResourceTypes:
         - role
         - rolebinding
         - serviceaccount
@@ -22,26 +28,17 @@ spec:
       type: resource
     - includeClusterResources: true
       includedResourceTypes:
-        - customresourcedefinitions.apiextensions.k8s.io
-        - clusterrole
-        - clusterrolebinding
-      labelSelector: foundationservices.cloudpak.ibm.com=ls-cluster
-      name: licensing-cluster-resources
+        - ibmlicensings.operator.ibm.com
+      labelSelector: foundationservices.cloudpak.ibm.com=ls-chart
+      name: licensing-instance
       type: resource
     - backupRef: licensing-ns-resources
-      includeClusterResources: true
       includedResourceTypes:
         - serviceaccount
         - role
         - rolebinding
-      name: licensing-rbac-resources
-      type: resource
-    - backupRef: licensing-ns-resources
-      includeClusterResources: true
-      includedResourceTypes:
-        - ibmlicensings.operator.ibm.com
         - secrets
-      name: licensing-workload-resources
+      name: licensing-rbac-resources
       type: resource
     - backupRef: licensing-ns-resources
       includeClusterResources: true
@@ -50,17 +47,18 @@ spec:
       name: licensing-deployment
       type: resource
   workflows:
-    - failOn: any-error
+    - failOn: essential-error
       name: singleton-resources-backup
       priority: 0
       sequence:
-        - group: licensing-ns-resources
         - group: licensing-cluster-resources
-    - failOn: any-error
+        - group: licensing-ns-resources
+        - group: licensing-instance
+    - failOn: essential-error
       name: singleton-resources-restore
       priority: 0
       sequence:
         - group: licensing-rbac-resources
         - group: licensing-cluster-resources
-        - group: licensing-workload-resources
+        - group: licensing-instance
         - group: licensing-deployment
