detect cluster domain
Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

--- a/velero/schedule/common-service-db/cs-db-br-script-cm-4.6.10.4.11.yaml
+++ b/velero/schedule/common-service-db/cs-db-br-script-cm-4.6.10.4.11.yaml
@@ -145,7 +145,7 @@ data:
             return 1
         fi
         
-        info "🔄 Updating IDP configuration..."
+        info "✅ Detected cluster domain: $CLUSTER_DOMAIN"
         
         NEW_IDP_URL="https://${CLUSTER_DOMAIN}/idprovider/v1/auth"
         
