update some br files
Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

--- a/velero/spectrum-fusion/application.yaml
+++ b/velero/spectrum-fusion/application.yaml
@@ -13,6 +13,7 @@ spec:
     - <cert manager namespace>
     - <licensing namespace>
     - <lsr namespace>
+    - <usage metering namespace>
     - openshift-marketplace    
     - openshift-config
     - kube-public
