remove clusterrole and clusterrolebinding from cpfs recipe
Signed-off-by: Allen Li <liyuchen223@gmail.com>

--- a/velero/spectrum-fusion/recipes/no-olm/core/child-cs-odlm-chart-recipe.yaml
+++ b/velero/spectrum-fusion/recipes/no-olm/core/child-cs-odlm-chart-recipe.yaml
@@ -11,16 +11,16 @@ spec:
   groups:
     - includeClusterResources: true
       includedResourceTypes:
-        - clusterrole
-        - clusterrolebinding
+        # - clusterrole
+        # - clusterrolebinding
         - customresourcedefinitions.apiextensions.k8s.io
       labelSelector: foundationservices.cloudpak.ibm.com=cs-cluster
       name: cs-cluster-resources
       type: resource
     - includeClusterResources: true
       includedResourceTypes:
-        - clusterrole
-        - clusterrolebinding
+        # - clusterrole
+        # - clusterrolebinding
         - customresourcedefinitions.apiextensions.k8s.io
       labelSelector: foundationservices.cloudpak.ibm.com=odlm-cluster
       name: odlm-cluster-resources
