--- a/velero/spectrum-fusion/recipes/no-olm/core/child-zen-chart-recipe.yaml
+++ b/velero/spectrum-fusion/recipes/no-olm/core/child-zen-chart-recipe.yaml
@@ -11,8 +11,8 @@ spec:
   groups:
     - includeClusterResources: true
       includedResourceTypes:
-        - clusterrole
-        - clusterrolebinding
+        # - clusterrole
+        # - clusterrolebinding
         - customresourcedefinitions.apiextensions.k8s.io
       labelSelector: foundationservices.cloudpak.ibm.com=zen-cluster
       name: zen-cluster-resources
