update cluster rbac
Signed-off-by: Allen Li <liyuchen223@gmail.com>

--- a/velero/spectrum-fusion/recipes/no-olm/core/child-cs-odlm-chart-recipe.yaml
+++ b/velero/spectrum-fusion/recipes/no-olm/core/child-cs-odlm-chart-recipe.yaml
@@ -11,8 +11,8 @@ spec:
   groups:
     - includeClusterResources: true
       includedResourceTypes:
-        # - clusterrole
-        # - clusterrolebinding
+        - clusterrole
+        - clusterrolebinding
         - customresourcedefinitions.apiextensions.k8s.io
       labelSelector: foundationservices.cloudpak.ibm.com=cs-cluster
       name: cs-cluster-resources
