--- a/velero/spectrum-fusion/recipes/no-olm/core/child-im-ui-chart-recipe.yaml
+++ b/velero/spectrum-fusion/recipes/no-olm/core/child-im-ui-chart-recipe.yaml
@@ -19,8 +19,8 @@ spec:
       type: resource
     - includeClusterResources: true
       includedResourceTypes:
-        - clusterrole
-        - clusterrolebinding
+        # - clusterrole
+        # - clusterrolebinding
         - customresourcedefinitions.apiextensions.k8s.io
       labelSelector: foundationservices.cloudpak.ibm.com=ui-cluster
       name: ui-cluster-resources
