add cpd default labels for cpfs cluster resources
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/helm-cluster-scoped/templates/crd.yaml
+++ b/helm-cluster-scoped/templates/crd.yaml
@@ -9,6 +9,12 @@ metadata:
     app.kubernetes.io/name: ibm-common-service-operator
     foundationservices.cloudpak.ibm.com: crd
     component-id: {{ .Chart.Name }}
+    {{- with .Values.cpfs.labels }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
+    {{- with .Values.cpfs.clusterLabels }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
   name: commonservices.operator.ibm.com
 spec:
   group: operator.ibm.com
