--- a/helm-cluster-scoped/values.yaml
+++ b/helm-cluster-scoped/values.yaml
@@ -2,6 +2,8 @@
 cpfs:
   imageRegistryNamespaceOperator: cpopen
   imageRegistryNamespaceOperand: cpopen/cpfs
+  labels:
+  clusterLabels:
 
 global:
   operatorNamespace: operator-ns
