--- a/helm-cluster-scoped/templates/cluster-rbac.yaml
+++ b/helm-cluster-scoped/templates/cluster-rbac.yaml
@@ -4,6 +4,12 @@ metadata:
   name: ibm-common-service-operator-{{ .Values.global.operatorNamespace }}
   labels:
     component-id: {{ .Chart.Name }}
+    {{- with .Values.cpfs.labels }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
+    {{- with .Values.cpfs.clusterLabels }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
 rules:   
   - apiGroups: 
       - ""
